# STM32F3-with-Hc-05-in-Rust

./: Cargo.toml  README.md
src/: main.rs
stmlib/: Cargo.toml
stmlib/src/: lib.rs
